# rb_servo_server

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  rb-servo-server.md
.omx/autoloop/: critic-iteration-1.md
.omx/context/: autonomous-real-readiness-loop-20260514T110745Z.md  critic-plan-review-20260514T091652Z.md  plan-redteam-review-20260514T082059Z.md  pre-implementation-policy-decisions-20260514T102426Z.md
.omx/debates/: critic-plan-review.md  pre-implementation-policy-decisions.md
.omx/plans/: todo123-real-readiness-roadmap.md
config/: dual_mock.yaml  dual_mock_compose.yaml  dual_rbsim.yaml  dual_real.yaml
docker/: rb_servo_gui.Dockerfile  rb_servo_server.Dockerfile
docs/: architecture.md  camera_sync.md  code_list.md  commit_slicing_advice.md  config_examples.md  control_loop.md  design_review_fixes.md  fail_safe_policy.md  file_guide.md  force_control.md  gui_operator_console.md  network_protocol.md  required_tests_and_smoke_checks.md  stop_conditions.md  testing.md
gui/rb_servo_gui/: pyproject.toml
gui/rb_servo_gui/rb_servo_gui/: __init__.py  app.py  command_client.py  models.py  safety.py  state_receiver.py
gui/rb_servo_gui/tests/: test_gui_contracts.py
include/rb_servo/config/: config.hpp
include/rb_servo/control/: cartesian_controller.hpp  command_buffer.hpp  dual_arm_servo_loop.hpp  force_controller.hpp  safety_filter.hpp  trajectory_filter.hpp
include/rb_servo/core/: clock.hpp  realtime.hpp  thread_safe_buffer.hpp  types.hpp
include/rb_servo/logging/: servo_logger.hpp
include/rb_servo/network/: command_server.hpp  state_publisher.hpp
include/rb_servo/robot/: backend_factory.hpp  i_robot_backend.hpp  mock_backend.hpp  rbpodo_backend.hpp
include/rb_servo/sensor/: i_force_torque_sensor.hpp  mock_force_torque_sensor.hpp
src/: main.cpp
src/config/: config.cpp
src/control/: cartesian_controller.cpp  command_buffer.cpp  dual_arm_servo_loop.cpp  force_controller.cpp  safety_filter.cpp  trajectory_filter.cpp
src/core/: clock.cpp  realtime.cpp  types.cpp
src/logging/: servo_logger.cpp
src/network/: command_server.cpp  state_publisher.cpp
src/robot/: backend_factory.cpp  mock_backend.cpp  rbpodo_backend.cpp
src/sensor/: mock_force_torque_sensor.cpp
tests/: test_safety_policy.cpp
tools/: analyze_servo_log.py  mock_gui_smoke.py  plot_servo_log.py  send_arm_motion.py  send_disarm_motion.py  send_dual_hold.py  send_dual_joint_sine.py  send_emergency_stop.py  send_reset_fault.py
